# Epoch.ai

./: .gitignore  Dockerfile  README.md  client.py  deploy_to_hf.py  generate_chapters.py  inference.py  models.py  openenv.yaml  openenv_spec.json  pyproject.toml  requirements.txt  run.py
MindMatrix/curriculum_flow_env/: Dockerfile  README.md  docker-compose.yml  requirements.txt  seed_demo_data.py
MindMatrix/curriculum_flow_env/curriculum_flow_env/: __init__.py  auth.py  database.py  env.py  quiz.py  server.py  study_content.py
MindMatrix/curriculum_flow_env/data/: mindmatrix.db
MindMatrix/curriculum_flow_env/demo/: app.py
MindMatrix/curriculum_flow_env/templates/: api_explorer.html  base.html  growth.html  home.html  landing.html  learning_category.html  login.html  profile.html  profile_edit.html  quiz.html  quiz_review.html  signup.html  simulation.html  (+1 more)
curriculum_flow_env/: auth.py  database.py  hf_ai.py  leetcode_data.py  quiz.py  rewards.py  server.py  study_content.py
curriculum_flow_env/agents/: __init__.py  difficulty_adapt.py
curriculum_flow_env/simulation/: curriculum.py  student.py  topic_graph.py
curriculum_flow_env/ui/: __init__.py  charts.py
demo/: app.py
server/: app.py  curriculum_environment.py
static/css/: style.css
static/js/: app.js
templates/: base.html  company_prep.html  daily_planner.html  dashboard.html  demo.html  dsa_roadmap.html  home.html  interview_sim.html  landing.html  learning.html  login.html  mock_tests.html  profile.html  quiz.html  quiz_review.html  signup.html  simulation.html
tests/: test_student_sim.py
(+16 files in other folders)
